gitops-template-harbor/apps/sample-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: sample-api
          image: sample-api
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /sample-api/healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /sample-api/healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
