gitops-template-harbor/apps/sample-api/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-api
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-ingress
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sample-api
      backendRefs:
        - name: sample-api
          port: 8080
